all servers pass all 5 test cases